# GameProject-master

app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: lev.sav
app/src/main/assets/Girl/: girl.sav
app/src/main/assets/Girl/primitives/: schorty002.pribln
app/src/main/assets/Man/: imgui.ini  man.sav
app/src/main/assets/Man/animations/: animation0.anibln
app/src/main/assets/Man/primitives/: Cube_Cube.001.pribln  Plane.pribln  boss.pribln
app/src/main/assets/Man2/: imgui.ini  man.sav
app/src/main/assets/Man2/primitives/: Gun.pribln
app/src/main/assets/Models/: balcony_floor.obj.pos  bill.mtl  bill.obj.pos  ceiling.obj.pos  cube.mtl  cube.obj.pos  door_left.obj.pos  door_right.mtl  door_right.obj.pos  model.obj.pos  pillar.obj.pos  pillar_top.obj.pos  room.obj.pos  terrain.mtl  tree.obj.pos
app/src/main/assets/Room/: imgui.ini  room.sav
app/src/main/assets/Room/primitives/: Cube.002.pribln  Cube.003.pribln  Cube.004.pribln  Cube.005.pribln  Cube.006.pribln  Cube.008.pribln  Cube.009.pribln  Cube.013.pribln  Cube.pribln  Cube_002.pribln  Cube_003.pribln  Cube_004.pribln  Cube_005.pribln  Cube_006.pribln  Cube_008.pribln  Cube_009.pribln  Cube_013.pribln  NurbsPath.pribln
app/src/main/assets/Shaders/: Hblur.vert  Vblur.vert  blur.frag  button.frag  button.vert  cubemap.frag  detect.frag  ibl.frag  ibl.vert  pbr.frag  pbr.vert  pbr_simple.frag  plane_reflection.frag  quad.frag  quad.vert  shader.frag  shader.vert  simple.frag  simple.vert  simpleQuad.frag  simpleQuad.vert  ssr.frag  terrain.frag  terrain.vert  textured.frag  textured.vert  tree.frag  tree.vert
app/src/main/assets/primitives/: glass.pribln  hull.pribln  nomer.pribln
app/src/main/cpp/: AssetsLoader.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  native-lib.cpp  shader_manager.h
app/src/main/cpp/Animation/: Animation.cpp  Animation.h  AnimationData.cpp  AnimationData.h  Animator.h
app/src/main/cpp/GameLogic/: Character.cpp  Character.h
app/src/main/cpp/Gui/: Button.cpp  Button.h  Gui.cpp  Gui.h
app/src/main/cpp/Inputs/: Touch.cpp  Touch.h
app/src/main/cpp/Loader/: SceneLoader.cpp  SceneLoader.h  load.h  objloader.cpp  objloader.hpp  vboindexer.cpp  vboindexer.hpp
app/src/main/cpp/Mesh/: Mesh.h
app/src/main/cpp/Object/: Object.cpp  Object.h
app/src/main/cpp/OpenGL/: Material.cpp  Material.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLTexture.cpp  OpenGLTexture.h
app/src/main/cpp/Physics/: PhysicsManager.cpp  PhysicsManager.h
app/src/main/cpp/Renderer/: Camera.h  FBO.h  Mesh.h  ModelLoader.h
app/src/main/cpp/Scene/: PreModel.h  Scene.cpp  Scene.h
app/src/main/java/com/example/myapplication/: GLView.java  MainActivity.java
(+629 files in other folders)
